// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Snapshots Info 1`] = `
<div
  className="sc-pFZIQ hUPNhy"
  role="alert"
  type="info"
>
  <div
    className="sc-fubCfw xPQjF"
  >
    <div
      className="sc-gKsewC bPCONH"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3C8.83 3 3 8.83 3 16s5.83 13 13 13 13-5.83 13-13S23.17 3 16 3zm0 2c6.09 0 11 4.91 11 11s-4.91 11-11 11S5 22.09 5 16 9.91 5 16 5zm-1 5v2h2v-2zm0 4v8h2v-8z"
        />
      </svg>
    </div>
    <div
      className="sc-iBPRYJ gNXZz"
    >
      <p>
        Body
      </p>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots Invalid type 1`] = `
<div
  className="sc-pFZIQ hUPNhy"
  role="alert"
  type={null}
>
  <div
    className="sc-fubCfw xPQjF"
  >
    <div
      className="sc-gKsewC bPCONH"
    />
    <div
      className="sc-iBPRYJ gNXZz"
    >
      <p>
        Body
      </p>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots No children 1`] = `null`;

exports[`Alert Snapshots No props 1`] = `
<div
  className="sc-pFZIQ hUPNhy"
  role="alert"
  type="info"
>
  <div
    className="sc-fubCfw xPQjF"
  >
    <div
      className="sc-gKsewC bPCONH"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3C8.83 3 3 8.83 3 16s5.83 13 13 13 13-5.83 13-13S23.17 3 16 3zm0 2c6.09 0 11 4.91 11 11s-4.91 11-11 11S5 22.09 5 16 9.91 5 16 5zm-1 5v2h2v-2zm0 4v8h2v-8z"
        />
      </svg>
    </div>
    <div
      className="sc-iBPRYJ gNXZz"
    >
      <p>
        Body
      </p>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots Success 1`] = `
<div
  className="sc-pFZIQ djHFWT"
  role="alert"
  type="success"
>
  <div
    className="sc-fubCfw xPQjF"
  >
    <div
      className="sc-gKsewC bPCONH"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3C8.83 3 3 8.83 3 16s5.83 13 13 13 13-5.83 13-13S23.17 3 16 3zm0 2c6.09 0 11 4.91 11 11s-4.91 11-11 11S5 22.09 5 16 9.91 5 16 5zm6.28 6.28L15 18.56l-4.28-4.28-1.44 1.44 5 5 .72.69.72-.7 8-8z"
        />
      </svg>
    </div>
    <div
      className="sc-iBPRYJ gNXZz"
    >
      <p>
        Body
      </p>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots Warning 1`] = `
<div
  className="sc-pFZIQ jilcca"
  role="alert"
  type="warning"
>
  <div
    className="sc-fubCfw xPQjF"
  >
    <div
      className="sc-gKsewC bPCONH"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 32 32"
        width="24"
      >
        <path
          d="M16 3.22l-.88 1.5-12 20.78-.84 1.5h27.44l-.84-1.5-12-20.78zm0 4L26.25 25H5.75zM15 14v6h2v-6zm0 7v2h2v-2z"
        />
      </svg>
    </div>
    <div
      className="sc-iBPRYJ gNXZz"
    >
      <p>
        Body
      </p>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots use Test Theme 1`] = `
<div
  className="sc-pFZIQ iwUSIz"
  role="alert"
  type="warning"
>
  <div
    className="sc-fubCfw xPQjF"
  >
    <div
      className="sc-gKsewC bPCONH"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 32 32"
        width="24"
      >
        <path
          d="M16 3.22l-.88 1.5-12 20.78-.84 1.5h27.44l-.84-1.5-12-20.78zm0 4L26.25 25H5.75zM15 14v6h2v-6zm0 7v2h2v-2z"
        />
      </svg>
    </div>
    <div
      className="sc-iBPRYJ gNXZz"
    >
      <p>
        Body
      </p>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots use VioletTendencies 1`] = `
<div
  className="sc-pFZIQ juzuRe"
  role="alert"
  type="warning"
>
  <div
    className="sc-fubCfw bVvdAF"
  >
    <div
      className="sc-gKsewC joziik"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 32 32"
        width="24"
      >
        <path
          d="M16 3.22l-.88 1.5-12 20.78-.84 1.5h27.44l-.84-1.5-12-20.78zm0 4L26.25 25H5.75zM15 14v6h2v-6zm0 7v2h2v-2z"
        />
      </svg>
    </div>
    <div
      className="sc-iBPRYJ gNXZz"
    >
      <p>
        Body
      </p>
    </div>
  </div>
</div>
`;

exports[`Alert Snapshots use whiteCollar 1`] = `
<div
  className="sc-pFZIQ hziaFW"
  role="alert"
  type="warning"
>
  <div
    className="sc-fubCfw xPQjF"
  >
    <div
      className="sc-gKsewC bPCONH"
    >
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 32 32"
        width="24"
      >
        <path
          d="M16 3.22l-.88 1.5-12 20.78-.84 1.5h27.44l-.84-1.5-12-20.78zm0 4L26.25 25H5.75zM15 14v6h2v-6zm0 7v2h2v-2z"
        />
      </svg>
    </div>
    <div
      className="sc-iBPRYJ gNXZz"
    >
      <p>
        Body
      </p>
    </div>
  </div>
</div>
`;
